@@ -111,6 +111,7 @@ void
 remctl_open(self, host, ...)
     Net::Remctl self
     const char *host
+  PROTOTYPE: DISABLE
   PREINIT:
     size_t count = items - 2;
     unsigned short port = 0;
@@ -120,8 +121,11 @@ remctl_open(self, host, ...)
         croak("Too many arguments to Net::Remctl::open");
     if (count >= 1)
         port = SvUV(ST(2));
-    if (count >= 2 && ST(3) != &PL_sv_undef)
+    if (count >= 2 && ST(3) != &PL_sv_undef) {
         principal = SvPV_nolen(ST(3));
+        if (*principal == '\0')
+            principal = NULL;
+    }
     if (remctl_open(self, host, port, principal))
         XSRETURN_YES;
     else
